--- a/Client/index.html
+++ b/Client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Instagram-Logo.wine.png" />
+    <link rel="icon" type="image/svg+xml" href="/Client/public/imgs/auth.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instantgram</title>
+    <title>Lumina</title>
   </head>
   <body>
     <div id="root"></div>
